<resources>
    <string name="app_name" translatable="false">MeshCentral Agent</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="setup_server">Setup Server</string>
    <string name="manual_setup_server">Manual Server Setup</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="clear_server">Clear Server</string>
    <string name="no_server_setup">No Server Setup</string>
    <string name="invalid_qrcode">Invalid QR code</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ok">OK</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="cancel">Cancel</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="authenticating">Authenticating</string>
    <string name="close">Close</string>
    <string name="meshcentral" translatable="false">MeshCentral</string>
    <string name="sharescreen">Share Screen</string>
    <string name="stopsharescreen">Stop Screen Sharing</string>
    <string name="displaysharing">Display is being shared</string>
    <string name="default_notification_channel_id">default</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="authCode">------</string>
    <string name="settings">Settings</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginVerification">Login Verification</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tryingToConnect">Trying...</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enablepushauthentication">Enable Push Authentication</string>
    <string name="automatic_connection">Automatic Connection</string>
    <string name="automatically_connect_to_server">Automatically connect to server</string>
    <string name="only_connect_when_requested">Only connect when requested</string>
    <string name="automatic_consent">Automatic Consent</string>
    <string name="automatically_give_consent_to_remote_agent">Automatically give consent to remote agent</string>
    <string name="always_ask_for_consent_when_remote_agent_connects">Always ask for consent when remote agent connects</string>
    <string name="setup_message">Setup to: %1$s?</string>
    <string name="clear_server_setup">Clear server setup?</string>
    <string name="server_pairing_link">Server Pairing Link</string>
    <string name="invalid_server_pairing_link">Invalid Server Pairing Linbk</string>
    <string name="accessibility_service_label">MeshCentral Remote Control</string>
    <string name="accessibility_service_description">Allows MeshCentral server to remotely control this device (touch and keyboard input)</string>
    <string name="enable_remote_control">Enable Remote Control</string>
    <string name="remote_control_active">Remote Control Active ✓</string>
    <string name="screen_sharing_active">Screen Sharing Active ✓</string>
    <string name="kill_app">Tắt Ứng Dụng</string>
</resources>